--- a/contactE.html
+++ b/contactE.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worcester</title>
+    <title>Le Chalutier - Eliot Champeil</title>
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
@@ -17,14 +17,14 @@
     <main>
         <img src="photoE.jpg" alt="">
     </main>
-    <h2>  Eliot Champeil est un étudiant de 18 ans, Eliot n’a pratiquement jamais vécu en France. Sept ans au Maroc, sept ans aux Philippines et une année à Singapour lui ont permis d’acquérir des compétences linguistiques en anglais supérieures à la moyenne, malgré le manque de prédisposition dans le domaine. La passion du jeu vidéo s’est manifestée rapidement chez lui, étant entouré depuis très jeune par la pop culture. Malheureusement, son père et la plupart de sa famille ne partagent pas sa passion (sauf pour Fifa). C’est pour cette raison qu’il s’est orienté vers des jeux solo tels que les RPG : il a ainsi découvert des monuments tels que Zelda, Hollow Knight ou encore Elden Ring.
-        Lorsqu’il s’agit de programmation, il possède des connaissances de base en HTML ainsi qu’en Python. Un stage lui a également permis d’obtenir des connaissances basiques sur Adobe After Effects. Intégrer l’Epita est pour lui une chance de devenir une part de cette industrie qu’il aime.
+    <h2>  Eliot Champeil est un étudiant de 18 ans, qui n'a pratiquement jamais vécu en France. Sept ans au Maroc, sept ans aux Philippines et une année à Singapour lui ont permis d'acquérir des compétences linguistiques en anglais supérieures à la moyenne, malgré le manque de prédisposition dans le domaine. La passion du jeu vidéo s'est manifestée rapidement chez lui, étant entouré depuis très jeune par la pop culture. Malheureusement, son père et la plupart de sa famille ne partagent pas sa passion (sauf pour Fifa). C'est pour cette raison qu'il s'est orienté vers des jeux solo tels que les RPG : il a ainsi découvert des monuments tels que Zelda, Hollow Knight ou encore Elden Ring.
+        Lorsqu'il s'agit de programmation, il possède des connaissances de base en HTML ainsi qu'en Python. Un stage lui a également permis d'obtenir des connaissances basiques sur Adobe After Effects. Intégrer l'Epita est pour lui une chance de devenir une part de cette industrie qu'il aime.
         
     </h2>
 
-<h3> Contact:</h3>
+<h3> Contact :</h3>
 
-<h4>&#x2022; eliot.champeil@epita.fr , <a href="mailto:eliot.champeil@epita.fr">Contactez-moi par email</a></h4>
+<h4>&#x2022; eliot.champeil@epita.fr, <a href="mailto:eliot.champeil@epita.fr" id="liens">Contactez-moi par email</a></h4>
 
     <footer>
         <p>&copy; 2024 Le Chalutier. Tous droits réservés.</p>
