--- a/contactR.html
+++ b/contactR.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worcester</title>
+    <title>Le Chalutier - Raphaël Obled</title>
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
@@ -17,13 +17,13 @@
     <main>
         <img src="photo.jpg" alt="">
     </main>
-    <h2>    Raphaël Obled est un jeune étudiant de 17 ans, originaire de la région parisienne et étant actuellement scolarisé à l'EPITA Villejuif. Depuis son plus jeune âge, il développe une passion pour les technologies qui nous entourent, ce qui le conduira plus tard vers la découverte de l’informatique. De nature très curieuse, il s’intéresse au fonctionnement des ordinateurs, des sites web ou encore des jeux vidéo. Cette passion le conduit tout logiquement vers l’EPITA, école française renommée dans le domaine de l’informatique. Là-bas, il rencontre de nombreuses personnes, notamment des camarades avec qui il fonde le studio de jeux vidéo indépendant « Le Chalutier ». C’est également au sein du studio que de nombreuses visions artistiques se rencontrent, que ce soit via le dessin, la musique ou encore l’animation. Pratiquant lui-même la guitare électrique, il participe à cet essor artistique, qui est l’élément essentiel du studio.    
+    <h2>    Raphaël Obled est un jeune étudiant de 17 ans, originaire de la région parisienne et étant actuellement scolarisé à l'EPITA Villejuif. Depuis son plus jeune âge, il développe une passion pour les technologies qui nous entourent, ce qui le conduira plus tard vers la découverte de l'informatique. De nature très curieuse, il s'intéresse au fonctionnement des ordinateurs, des sites web ou encore des jeux vidéo. Cette passion le conduit tout logiquement vers l'EPITA, école française renommée dans le domaine de l'informatique. Là-bas, il rencontre de nombreuses personnes, notamment des camarades avec qui il fonde le studio de jeux vidéo indépendant « Le Chalutier ». C'est également au sein du studio que de nombreuses visions artistiques se rencontrent, que ce soit via le dessin, la musique ou encore l'animation. Pratiquant lui-même la guitare électrique, il participe à cet essor artistique, qui est l'élément essentiel du studio.    
         
     </h2>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+<h3> Contact :</h3>
 
-<h3> Contact:</h3>
-
-<h4>&#x2022; raphael.obled@epita.fr , <a href="mailto:raphael.obled@epita.fr">Contactez-moi par email</a></h4>
+<h4>&#x2022; raphael.obled@epita.fr, <a href="mailto:raphael.obled@epita.fr" id="liens">Contactez-moi par email</a></h4>
 
     <footer>
         <p>&copy; 2024 Le Chalutier. Tous droits réservés.</p>
