--- a/contactY.html
+++ b/contactY.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worcester</title>
+    <title>Le Chalutier - Yvan Prevost</title>
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
@@ -18,12 +18,12 @@
         <img src="photoY.jpg" alt="">
     </main>
     <h2>    
-        Titulaire d’un Baccalauréat Français International, il est polyvalent à la fois culturellement et linguistiquement : une véritable patate ! Il fut initié aux jeux vidéo très jeune grâce à son père, dont la profession est reliée à leur création. Cela le conduira à aimer de plus en plus le domaine de l’informatique, notamment avec la découverte des scripts Python et Java, ainsi que le langage HTML. En intégrant l’EPITA, il espère pouvoir suivre les traces de son père et participer à la création de [Worcestershire Fish], à travers l’utilisation de Godot et du langage C# afin de porter à bien la réalisation du game design du projet.
+        Titulaire d'un Baccalauréat Français International, il est polyvalent à la fois culturellement et linguistiquement : une véritable patate ! Il fut initié aux jeux vidéo très jeune grâce à son père, dont la profession est reliée à leur création. Cela le conduira à aimer de plus en plus le domaine de l'informatique, notamment avec la découverte des scripts Python et Java, ainsi que le langage HTML. En intégrant l'EPITA, il espère pouvoir suivre les traces de son père et participer à la création de [Worcestershire Fish], à travers l'utilisation de Godot et du langage C# afin de porter à bien la réalisation du game design du projet.
     </h2>
 
-<h3> Contact:</h3>
+<h3> Contact :</h3>
 
-<h4>&#x2022; yvan.prevost@epita.fr , <a href="mailto:yvan.prevost@epita.fr">Contactez-moi par email</a></h4>
+<h4>&#x2022; yvan.prevost@epita.fr, <a href="mailto:yvan.prevost@epita.fr" id="liens">Contactez-moi par email</a></h4>
 
     <footer>
         <p>&copy; 2024 Le Chalutier. Tous droits réservés.</p>
