--- a/Le Chalutier.html
+++ b/Le Chalutier.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <h1>LE CHALUTIER</h1>
-        <img src = "logo.png" id = "logo">
+        
         <a href="LesMatelots.html" id="buttonChalutier">L'équipage</a>
-        <br>
-        <a href="Le Chalutier.html" id="buttonChalutier">Accueil</a>
+        
+        <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
 
     </header>
 
