--- a/LesMatelots.html
+++ b/LesMatelots.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>L'équipage :</h1>
+        <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
     
     </header>
 
