--- a/LesMatelots.html
+++ b/LesMatelots.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>L'équipage :</h1>
+        <h1>The Crew :</h1>
         <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
     
     </header>
@@ -34,7 +34,7 @@
    
 
     <footer>
-        <p>&copy; 2024 Le Chalutier. Tous droits réservés.</p>
+        <p>&copy; 2024 Le Chalutier. All rights reserved.</p>
     </footer>
 </body>
 </html>
