--- a/LesMatelots.html
+++ b/LesMatelots.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Chalutier - L'équipage</title>
+    <title>Le Chalutier - The Crew</title>
     <link rel="stylesheet" href="stylesMatelo.css"> 
 </head>
 <body>
