--- a/contactML.html
+++ b/contactML.html
@@ -10,6 +10,8 @@
     <header>
         <h1>Mohamed Lahbabi</h1>
         <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
+        <br>
+        <a href="LesMatelots.html" id = "lienback">Back</a>
         
     </header>
 
@@ -24,7 +26,7 @@
     <br><br>
 <h3> Contact :</h3>
 
-<h4>&#x2022; mohamed.lahbabi@epita.fr, <a href="mailto:mohamed.lahbabi@epita.fr" id="liens">Contactez-moi par email</a></h4>
+<h4>&#x2022; mohamed.lahbabi@epita.fr, <a href="mailto:mohamed.lahbabi@epita.fr" id="liens">Contact me by mail</a></h4>
 
     <footer>
         <p>&copy; 2024 Le Chalutier. All rights reserved.</p>
