--- a/contactR.html
+++ b/contactR.html
@@ -10,7 +10,8 @@
     <header>
         <h1>Raphaël Obled</h1>
         <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
-        
+        <br>
+        <a href="LesMatelots.html" id = "lienback">Back</a>
         
     </header>
 
@@ -23,7 +24,7 @@
     <br><br><br><br><br><br><br><br><br><br><br><br>
 <h3> Contact :</h3>
 
-<h4>&#x2022; raphael.obled@epita.fr, <a href="mailto:raphael.obled@epita.fr" id="liens">Contactez-moi par email</a></h4>
+<h4>&#x2022; raphael.obled@epita.fr, <a href="mailto:raphael.obled@epita.fr" id="liens">Contact me by mail</a></h4>
 
     <footer>
         <p>&copy; 2024 Le Chalutier. All rights reserved.</p>
