--- a/Le Chalutier.html
+++ b/Le Chalutier.html
@@ -11,8 +11,8 @@
         
         <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
         <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LE CHALUTIER</h1>
-        <a href="LesMatelots.html" id="lienback" style="font-size: 25px;">The crew</a>
-        <a href="Spritesweb.html" id="lienback" style="font-size: 25px;">Sprites [WIP]</div></a>
+        <button id="btnmat" onclick="window.location.href='LesMatelots.html';">The Crew</button>
+        <button id="btnsprites" onclick="window.location.href='Spritesweb.html';">Sprites</button>
     </header>
 
     <main>
