--- a/contactM.html
+++ b/contactM.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Chalutier - Maxime Rampazzo</title>
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="stylespresentation.css"> 
 </head>
 <body>
     <header>
         <h1>Maxime Rampazzo</h1>
-        <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
+        <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "téléchargement.png" id = "logo"></a>
         <br>
         <a href="LesMatelots.html" id = "lienback">Back</a>
         
