--- a/contactR.html
+++ b/contactR.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Chalutier - Raphaël Obled</title>
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="stylespresentation.css"> 
 </head>
 <body>
     <header>
         <h1>Raphaël Obled</h1>
-        <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "logo.jpg" id = "logo"></a>
+        <a href="Le Chalutier.html" ><img href="LesMatelots.html" src = "téléchargement.png" id = "logo"></a>
         <br>
         <a href="LesMatelots.html" id = "lienback">Back</a>
         
     </header>
 
     <main>
-        <img src="photo.jpg" alt="">
+        <img src="photo.jpg" alt="" id="photoo">
     </main>
     <h2>    Raphaël Obled is a 17-year-old student from the Paris region currently studying at EPITA Villejuif. From a young age, he developed a passion for the technologies around us, which later led him to discover computer science. Very curious by nature, he is interested in how computers, websites and video games work. This passion quite logically led him to EPITA, a renowned French school in the field of computer science. There, he met many people, including classmates with whom he founded the independent video game studio "Le Chalutier". It is also within the studio that many artistic visions meet, whether through drawing, music or animation. Practicing electric guitar himself, he participates in this artistic development, which is the essential element of the studio.
         
