--- a/Le Chalutier.html
+++ b/Le Chalutier.html
@@ -26,7 +26,7 @@
             <h7> Here is all the option to discover our game : </h7>
             <button id="btnsprites2" onclick="window.location.href='Spritesweb.html';">Sprites</button>
             <button id="btnmat2" onclick="window.location.href='LesMatelots.html';">The Crew</button>
-            <button id="btnressources2" onclick="window.location.href='Spritesweb.html';">Ressources</button>
+            <button id="btnressources2" onclick="window.location.href='documents.html';">Ressources</button>
             <button id="download2" onclick="window.location.href='AttemptedExport.exe';">download</button>
             </section>
       </main>
