--- a/Le Chalutier.html
+++ b/Le Chalutier.html
@@ -13,7 +13,7 @@
         <img src="téléchargement.png" alt="" id="imglog">
         <button id="btnmat" onclick="window.location.href='LesMatelots.html';">The Crew</button>
         <button id="btnsprites" onclick="window.location.href='Spritesweb.html';">Sprites</button>
-        <button id="btnressources" onclick="window.location.href='Spritesweb.html';">Ressources</button>
+        <button id="btnressources" onclick="window.location.href='documents.html';">Ressources</button>
         <button id="download" onclick="window.location.href='AttemptedExport.exe';">download</button>
     </header>
 
