--- a/Le Chalutier.html
+++ b/Le Chalutier.html
@@ -14,20 +14,20 @@
         <button id="btnmat" onclick="window.location.href='LesMatelots.html';">The Crew</button>
         <button id="btnsprites" onclick="window.location.href='Spritesweb.html';">Sprites</button>
         <button id="btnressources" onclick="window.location.href='documents.html';">Ressources</button>
-        <button id="download" onclick="window.location.href='AttemptedExport.exe';">download</button>
+        <button id="download" onclick="window.location.href='AttemptedExport.exe';">downloads</button>
     </header>
 
     <main>
         <div class="image-section">
-            <img src="NewCheeseLand.jpg" alt="">
+            <img src="NewCheeseLand.png" alt="">
             
         </div>
         <section class="content-section">
-            <h7> Here is all the option to discover our game : </h7>
+            <h7> Here are all the options for discovering our game: </h7>
             <button id="btnsprites2" onclick="window.location.href='Spritesweb.html';">Sprites</button>
             <button id="btnmat2" onclick="window.location.href='LesMatelots.html';">The Crew</button>
             <button id="btnressources2" onclick="window.location.href='documents.html';">Ressources</button>
-            <button id="download2" onclick="window.location.href='AttemptedExport.exe';">download</button>
+            <button id="download2" onclick="window.location.href='AttemptedExport.exe';">downloads</button>
             </section>
       </main>
  
