--- a/documents.html
+++ b/documents.html
@@ -24,13 +24,14 @@
             <h3>Defense:</h3>
             <button id="defense1" onclick="window.location.href='soutenance1.pdf';">Defense 1</button>
             <button id="defense2" onclick="window.location.href='soutenance2.pdf';">Defense 2</button>
+            <button id="defense3" onclick="window.location.href='soutenance2.pdf';">Defense 3</button>
         </Div>
         
     </main>
 
     
     <footer>
-        <p>&copy; 2024 Le Chalutier. All rights reserved.</p>
+        <p>&copy; 2025 Le Chalutier. All rights reserved.</p>
     </footer>
 </body>
 </html>
